--- a/Code/HTML/main menu.html
+++ b/Code/HTML/main menu.html
@@ -3,12 +3,13 @@
 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href= "menu.css">
+        <link rel="stylesheet" type="text/css" href= "../Css/menu.css">
+        <script type="text/javascript" href ="../Javascript/main menu.js" defer="true"></script>
     </head>
     <body>
         <menu>
             <button id = "jogar">
-                <img src="../../Resources/Sprites/Main Menu/botão jogar.png">
+                <img src ="../../Resources/Sprites/Main Menu/botão jogar.png">
             </button>
             <button id = "opcoes">
                 <img src="../../Resources/Sprites/Main Menu/botão opções.png">
@@ -21,4 +22,5 @@
             </button>
         </menu>
     </body>
+    
 </html>
