--- a/Code/HTML/main menu.html
+++ b/Code/HTML/main menu.html
@@ -4,7 +4,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href= "../Css/menu.css">
-        <script type="text/javascript" href ="../Javascript/main menu.js" defer="true"></script>
+        <script type="text/javascript" src ="../Javascript/main menu.js"></script>
     </head>
     <body>
         <menu>
