Classe Pessoa/Padeira

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>Aljubarrota: The Game</title>
         <script src="phaser.js"></script>
         <link rel="stylesheet" href="Code/Css/main.css">
-        <script type="text/javascript" src="Code/Javascript/projeto.js" defer="true"></script>
-        
+        <script type="text/javascript" src="Code/Javascript/projeto.js"></script>
+        <script type="text/javascript" src="Code/Javascript/Pessoa.js"></script>
+
     </head>
     
     <body>
