--- a/Code/main.html
+++ b/Code/main.html
@@ -2,8 +2,9 @@
 
 <html>
     <head>
-
+        <meta charset="utf-8">
         <title>Aljubarrota: The Game</title>
+        <script src="phaser.js"></script>
         <script type = "text/javascript" src="Javascript/main.js"></script>
     </head>
 
