Game scroll bar fix
Fixei a scroll bar do jogo, falta a do som

--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -6,9 +6,7 @@
         <meta charset="utf-8">
         <title>Aljubarrota: The Game</title>
         <script src="phaser.js"></script>
-        <link rel="stylesheet" href="../Css/main.css">
-        
-
+        <link rel="stylesheet" type="text/css" href="../Css/jogo.css">
         
         <script type="text/javascript" src="../Javascript/projeto.js"></script>
         <script type="text/javascript" src="../Javascript/Pessoa.js"></script>
