--- a/Code/main.html
+++ b/Code/main.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Aljubarrota: The Game</title>
+        <link rel="stylesheet" type="text/css" href="Css/main.css">
         <script src="phaser.js"></script>
         <script type = "text/javascript" src="Javascript/main.js"></script>
     </head>
