--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>Aljubarrota: The Game</title>
+        <link rel="stylesheet" type="text/css" href="Code/Css/main.css">
         <script src="phaser.js"></script>
-        <script type = "text/javascript" src="Code/Javascript/main.js"></script>
     </head>
-
+    
     <body>
         <iframe width="1200" height="800" ></iframe>
+        <script type = "text/javascript" src="Code/Javascript/main.js"></script>
     </body>
         
 </html>
