sou um :banana: s

--- a/Code/HTML/opcoes.html
+++ b/Code/HTML/opcoes.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         <script src="phaser.js"></script>
-        <link rel="stylesheet" type="text/css" src = "../Css/opcoes.css">
-        <script type = "text/javascript" src = "opcoes.js" defer="true"></script>
+        <link rel="stylesheet" type="text/css" href = "../Css/opcoes.css">
+        <script type = "text/javascript" src = "../Javascript/opcoes.js" defer="true"></script>
         
     </head>
     
