--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -12,6 +12,7 @@
         <script type="text/javascript" src="../Javascript/Pessoa.js"></script>
         <script type="text/javascript" src="../Javascript/Padeira.js"></script>
         <script type="text/javascript" src="../Javascript/Castelhano.js"></script>
+        <script type="text/javascript" src="../Javascript/Portal.js"></script>
         
     </head>
     
