--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -5,7 +5,7 @@
         
         <meta charset="utf-8">
         <title>Aljubarrota: The Game</title>
-        <script src="phaser.js"></script>
+        <script src="../../phaser.js"></script>
         <link rel="stylesheet" type="text/css" href="../Css/jogo.css">
         
         <script type="text/javascript" src="../Javascript/projeto.js"></script>
