--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="../Javascript/Padeira.js"></script>
         <script type="text/javascript" src="../Javascript/Castelhano.js"></script>
         <script type="text/javascript" src="../Javascript/Portal.js"></script>
+        <script type="text/javascript" src="../Javascript/sample.json"></script>
         
     </head>
     
