--- a/Code/HTML/opcoes.html
+++ b/Code/HTML/opcoes.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <script src="phaser.js"></script>
+        <script src="../../phaser.js"></script>
 
         <link rel="stylesheet" type="text/css" href = "../Css/opcoes.css">
         <script type = "text/javascript" src = "../Javascript/opcoes.js" defer="true"></script>
