--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -17,7 +17,7 @@
         <script type="text/javascript" src="../Javascript/sample.json"></script>
         <script type="text/javascript" src="../Javascript/levelDesign.js"></script>
         <script type="text/javascript" src="../Javascript/sound.js"></script>
-        
+        <script type="text/javascript" src="../Javascript/Objective.js"></script>
     </head>
     
     <body>
