castela rise up

--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -21,6 +21,8 @@
         <script type="text/javascript" src="../Javascript/Padeira.js"></script>
         <script type="text/javascript" src="../Javascript/Castelhano.js"></script>
         <script type="text/javascript" src="../Javascript/CastelhanoSmall.js"></script>
+        <script type="text/javascript" src="../Javascript/CastelhanoMedium.js"></script>
+        <script type="text/javascript" src="../Javascript/CastelhanoHeavy.js"></script>
         <script type="text/javascript" src="../Javascript/Portal.js"></script>
         <script type="text/javascript" src="../Javascript/sample.json"></script>
         <script type="text/javascript" src="../Javascript/levelDesign.js"></script>
