--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -28,7 +28,8 @@
         <script type="text/javascript" src="../Javascript/levelDesign.js"></script>
         <script type="text/javascript" src="../Javascript/sound.js"></script>
         <script type="text/javascript" src="../Javascript/Objective.js"></script>
-
+        <script type="text/javascript" src="../Javascript/PauseScene.js"></script>
+        
         <script type="text/javascript" src="../../Levels/sample.json"></script>
     </head>
     
