--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -29,7 +29,7 @@
         <script type="text/javascript" src="../Javascript/sound.js"></script>
         <script type="text/javascript" src="../Javascript/Objective.js"></script>
 
-        <script type="text/javascript" src="../../Levels/sample.json"></script>
+        <script type="text/javascript" src="../../Levels/lvl1.json"></script>
     </head>
     
     <body>
