--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -31,6 +31,7 @@
         <script type="text/javascript" src="../Javascript/PauseScene.js"></script>
         <script type="text/javascript" src="../Javascript/GameOver.js"></script>
         <script type="text/javascript" src="../../Levels/lvl1.json"></script>
+        <script type="text/javascript" src="../../Levels/lvl2.json"></script>
 
     </head>
     
