--- a/Code/HTML/jogo.html
+++ b/Code/HTML/jogo.html
@@ -30,6 +30,7 @@
         <script type="text/javascript" src="../Javascript/Objective.js"></script>
         <script type="text/javascript" src="../Javascript/PauseScene.js"></script>
         <script type="text/javascript" src="../Javascript/GameOver.js"></script>
+        <script type="text/javascript" src="../Javascript/WinScreen.js"></script>
         <script type="text/javascript" src="../../Levels/lvl1.json"></script>
         <script type="text/javascript" src="../../Levels/lvl2.json"></script>
     </head>
